--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
 
         }
 
+        p {
+            margin-left: 50px;
+            margin-right: 200px;
+        }
+
+        h1 {
+            margin-left: 50px;
+        }
+
+        div {
+            margin-left: 50px;
+        }
+
         .row {
             display: flex;
             flex-wrap: wrap;
