--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <body>
     <div>
         <h1>COVID-19 Reported Active Cases by US State</h1>
-        <p>These graphs show the number of active cases of COVID-19 in US States and territories over time. 
-            I'm operating under the assumption that each person is no longer contagious
-            28 days after they've been tested. Keep in mind that these are only reported cases,
+        <p>These graphs show one estimate of the number of active cases of COVID-19 in US States and territories over time.
+            That is, the estimated number of people who are currently sick.
+            Keep in mind that these are only reported cases,
             and the actual number of active cases may be much higher.</p>
         <p>Last Updated: 9:34am EDT 6/8/2020</p>
         <p><a href="https://github.com/dalton-b/dalton-b.github.io">My Project Source</a></p>
@@ -80,23 +80,27 @@
             <img src="/plots/Active_Alaska.png">
         </div>
         <div class="column">
+            <img src="/plots/American Samoa.png">
             <img src="/plots/Active_Arizona.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Arkansas.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_California.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Colorado.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Connecticut.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Delaware.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_District of Columbia.png">
-            <img src="/plots/Active_Florida.png">
         </div>
         <div class="column">
+            <img src="/plots/Active_Florida.png">
             <img src="/plots/Active_Georgia.png">
+        </div>
+        <div class="column">
+            <img src="/plots/Active_Guam.png">
             <img src="/plots/Active_Hawaii.png">
         </div>
         <div class="column">
@@ -177,7 +181,7 @@
         </div>
         <div class="column">
             <img src="/plots/Active_Wyoming.png">
-            <img src="/plots/Active_Guam.png">
+
         </div>
     </div>
 
