attempted to make a graph for 'total cases,' not successful yet

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="/plots/Active_Alaska.png">
         </div>
         <div class="column">
-            <img src="/plots/American Samoa.png">
+            <img src="/plots/Active_American Samoa.png">
             <img src="/plots/Active_Arizona.png">
         </div>
         <div class="column">
