--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             That is, the estimated number of people who are currently sick.
             Keep in mind that these are only reported cases,
             and the actual number of active cases may be much higher.</p>
-        <p>Last Updated: 9:34am EDT 6/8/2020</p>
+        <p>Last Updated: 10:34am EDT 6/9/2020</p>
         <p><a href="https://github.com/dalton-b/dalton-b.github.io">My Project Source</a></p>
         <p><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series">Data Source</a></p>
             
@@ -76,110 +76,111 @@
 
     <div class="row">
         <div class="column">
+            <img src="/plots/Active_Total.png">
             <img src="/plots/Active_Alabama.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Alaska.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_American Samoa.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Arizona.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Arkansas.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_California.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Colorado.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Connecticut.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Delaware.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_District of Columbia.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Florida.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Georgia.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Guam.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Hawaii.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Idaho.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Illinois.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Indiana.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Iowa.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Kansas.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Kentucky.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Louisiana.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Maine.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Maryland.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Massachusetts.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Michigan.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Minnesota.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Mississippi.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Missouri.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Montana.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Nebraska.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Nevada.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_New Hampshire.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_New Jersey.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_New Mexico.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_New York.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_North Carolina.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_North Dakota.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Ohio.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Oklahoma.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Oregon.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Pennsylvania.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Puerto Rico.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Rhode Island.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_South Carolina.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Tennessee.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Texas.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Utah.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Vermont.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Virginia.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Washington.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_West Virginia.png">
-            <img src="/plots/Active_Wisconsin.png">
         </div>
         <div class="column">
+            <img src="/plots/Active_Wisconsin.png">
             <img src="/plots/Active_Wyoming.png">
 
         </div>
