Added South Dakota because I originally forgot it (but come on, was I the only one?)

--- a/index.html
+++ b/index.html
@@ -165,24 +165,26 @@
         </div>
         <div class="column">
             <img src="/plots/Active_South Carolina.png">
+            <img src="/plots/Active_South Dakota.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Tennessee.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Texas.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Utah.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Vermont.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Virginia.png">
-        </div>
-        <div class="column">
             <img src="/plots/Active_Washington.png">
-            <img src="/plots/Active_West Virginia.png">
         </div>
         <div class="column">
+            <img src="/plots/Active_West Virginia.png">
             <img src="/plots/Active_Wisconsin.png">
+        </div>
+        <div class="column">
             <img src="/plots/Active_Wyoming.png">
-
         </div>
     </div>
 
