--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             flex: 50%;
             padding: 0 4px;
             text-align: center;
-            /* width: 600px; */
+            max-width: 850px; 
             /* top | right | bottom | left */
-            margin: 1em 25em 1em 50px;
+            margin: 1em 50px 1em 50px;
             padding: 2em;
             background-color: #fdfdff;
             border-radius: 0.5em;
