--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <p>The orange graphs show an 8 day moving average of the number of deaths, with the actual number of deaths on the same graph in light blue.
             This averaging is done because the death numbers are highly variable from day to day, so averaging them makes the graph more readable.
         </p>
-        <p>Last Updated: 6/30/2020 8:33AM EDT</p>
+        <p>Last Updated: 6/30/2020 18:42 EDT</p>
         <!-- <p><strong>NOTE</strong> (6/14/2020 10:45pm EDT): I noticed an error with death numbers causing numbers to appear much higher than they really are. I've since fixed the error.</p> -->
         <p><a href="https://github.com/dalton-b/dalton-b.github.io">My Project Source</a></p>
         <p><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series">Data Source</a></p>
@@ -86,7 +86,7 @@
 <div class="column">
 <h3>Total United States</h3>
 <img src="/plots/us/cases/cases_Total.png"/>
-<img src="/plots/Global_Deaths/Deaths_US.png"/>
+<img src="/plots/global/deaths/deaths_US.png"/>
 </div>
 <div class="column">
 <h3>Alabama</h3>
@@ -359,5 +359,6 @@
 <img src="/plots/us/deaths/deaths_Wyoming.png"/>
 </div>
 </div>
-</body>
-</html>
+
+
+</body></html>
