--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         <p>The orange graphs show an 8 day moving average of the number of deaths, with the actual number of deaths on the same graph in light blue.
             This averaging is done because the death numbers are highly variable from day to day, so averaging them makes the graph more readable.
         </p>
-        <p>Last Updated: 6/30/2020 18:42 EDT</p>
+        <p>Last Updated: 7/1/2020 6:13 EDT</p>
         <!-- <p><strong>NOTE</strong> (6/14/2020 10:45pm EDT): I noticed an error with death numbers causing numbers to appear much higher than they really are. I've since fixed the error.</p> -->
+
+        <p><a href="global.html">Global Data</a></p>
         <p><a href="https://github.com/dalton-b/dalton-b.github.io">My Project Source</a></p>
         <p><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_time_series">Data Source</a></p>
 
@@ -89,9 +91,9 @@
 <img src="/plots/global/deaths/deaths_US.png"/>
 </div>
 <div class="column">
-<h3>Alabama</h3>
-<img src="/plots/us/cases/cases_Alabama.png"/>
-<img src="/plots/us/deaths/deaths_Alabama.png"/>
+    <h3>Alabama</h3>
+    <img src="/plots/us/cases/cases_Alabama.png"/>
+    <img src="/plots/us/deaths/deaths_Alabama.png"/>
 </div>
 <div class="column">
 <h3>Alaska</h3>
