Missed some text

--- a/global.html
+++ b/global.html
@@ -71,7 +71,7 @@
 
 <body>
     <div>
-        <h1>COVID-19 Reported Deaths by Country</h1>
+        <h1>COVID-19 Reported Cases and Deaths by Country</h1>
 
         <p>Last Updated: 7/1/2020 6:13 EDT</p>
 
